[tool.poetry]
name = "queidea-graphql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1"
Flask = "^1.1"
click = "^7.0"
flask-graphql = "^2.0"
sqlalchemy = "^1.3"
graphene_sqlalchemy = "^2.2"
pg8000 = "^1.13"
structlog = "^19.1"
PyJWT = "^1.7.1"
cryptography = "^2.7"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
flake8 = "^3.7"
rope = "^0.14.0"

[tool.poetry.scripts]
server_up = "manage:runserver"
db_schema="manage:create_schema"
db_fixtures="manage:add_fixtures"
db_database="manage:create_db"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
